force-app/main/default/objects/Junction_Ticket_Opportunity__c/Junction_Ticket_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Related Opportunity</label>
    <nameField>
        <displayFormat>TO-{00000000}</displayFormat>
        <label>Junction_Ticket_Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>