force-app/main/default/objects/Junction_Ticket_Opportunity__c/fields/Opportunity_Expected_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Expected_Book_Date__c</fullName>
    <formula>Related_Opprtunity_to_Request__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Expected Book Date</label>
    <type>Date</type>
</CustomField>