force-app/main/default/objects/Junction_Ticket_Opportunity__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>Related_Opprtunity_to_Request__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>