force-app/main/default/objects/Junction_Ticket_Opportunity__c/fields/Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value__c</fullName>
    <label>Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>