force-app/main/default/objects/Junction_Ticket_Opportunity__c/fields/Related_Opprtunity_to_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Opprtunity_to_Request__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Junction_Ticket_Opportunitys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>