force-app/main/default/objects/Junction_Ticket_Opportunity__c/fields/Related_TicketRequest__c.field-meta.xml
<CustomField>
    <fullName>Related_TicketRequest__c</fullName>
    <description>Create Many to Many Relationship b/w TicketRequest</description>
    <label>Ticket Request</label>
    <referenceTo>Ticket_Request__c</referenceTo>
    <relationshipName>Junction_Ticket_Opportunitys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>